--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
           <ul class="navigation__list list">
             <li class="navigation__item">
               <a class="navigation__link link current" href="./index.html"
-                >Студия</a
-              >
+                >Студия
+              </a>
             </li>
             <li class="navigation__item">
               <a class="navigation__link link" href="./portfolio.html"
@@ -36,21 +36,24 @@
             </li>
           </ul>
         </nav>
-        <a class="cont-link link" href="mailto:info@devstudio.com">
-          <svg class="cont-link__icon" width="16" height="12">
-            <use
-              class="icon-color"
-              href="./images/sprite.svg#icon-envelope"
-            ></use>
-          </svg>
-          info@devstudio.com
-        </a>
-        <a class="cont-link link" href="tel:+380961111111">
-          <svg class="cont-link__icon" width="10" height="16">
-            <use href="./images/sprite.svg#icon-smartphone"></use>
-          </svg>
-          +38 096 111 11 11
-        </a>
+        <ul class="tablet-conts list">
+          <li class="tablet-conts__item">
+            <a class="cont-link link" href="mailto:info@devstudio.com">
+              <svg class="cont-link__icon envelope-icon--size">
+                <use href="./images/sprite.svg#icon-envelope"></use>
+              </svg>
+              info@devstudio.com
+            </a>
+          </li>
+          <li class="tablet-conts__item">
+            <a class="cont-link link" href="tel:+380961111111">
+              <svg class="cont-link__icon tel-icon--size">
+                <use href="./images/sprite.svg#icon-smartphone"></use>
+              </svg>
+              +38 096 111 11 11
+            </a>
+          </li>
+        </ul>
         <button class="burger-btn" type="button" data-menu-button>
           <svg class="burger-icon">
             <use href="./images/sprite.svg#icon-menu_40px"></use>
@@ -71,26 +74,38 @@
             <a class="mobile-menu__link link" href="">Контакты</a>
           </li>
         </ul>
-        <a class="cont-link link" href="mailto:info@devstudio.com">
-          info@devstudio.com
-        </a>
-        <a class="cont-link link" href="tel:+380961111111">
-          +38 096 111 11 11
-        </a>
-        <ul class="social list">
-          <li class="solcial-links__item">
-            <a href="#" class="sosial__link link">Instagram</a>
+        <ul class="mobile-menu__cont-link list">
+          <li class="mobile-menu__cont-item">
+            <a class="cont-link link cont-link--tel" href="tel:+380961111111">
+              +38&nbsp096&nbsp111&nbsp11&nbsp11
+            </a>
           </li>
-          <li class="solcial-links__item">
-            <a href="#" class="sosial__link link">Twitter</a>
+          <li class="mobile-menu__cont-item">
+            <a
+              class="cont-link link cont-link--mail"
+              href="mailto:info@devstudio.com"
+            >
+              info@devstudio.com
+            </a>
           </li>
-          <li class="solcial-links__item">
-            <a href="#" class="sosial__link link">Facebook</a>
-          </li>
-          <li class="solcial-links__item">
-            <a href="#" class="sosial__link link">LinkedIn</a>
+          <li class="mobile-menu__cont-item">
+            <ul class="mobile-menu-social list">
+              <li class="mobile-menu-social__item">
+                <a href="#" class="mobile-menu-social__link link">Instagram</a>
+              </li>
+              <li class="mobile-menu-social__item">
+                <a href="#" class="mobile-menu-social__link link">Twitter</a>
+              </li>
+              <li class="mobile-menu-social__item">
+                <a href="#" class="mobile-menu-social__link link">Facebook</a>
+              </li>
+              <li class="mobile-menu-social__item">
+                <a href="#" class="mobile-menu-social__link link">LinkedIn</a>
+              </li>
+            </ul>
           </li>
         </ul>
+
         <button class="close-btn" type="button" data-menu-close>
           <svg class="close-btn__icon">
             <use href="./images/sprite.svg#icon-close-black-18dp-1"></use>
