--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
     <!--advanteges-->
 
     <section class="advantages section">
-      <ul class="container list">
+      <ul class="advantages__list container list">
         <li class="advantages__item">
           <div class="advantages__icons">
             <svg width="70" height="70">
@@ -389,10 +389,10 @@
       </div>
     </section>
     <!--Our clients-->
-    <!-- <section class="section">
+    <section class="section">
                 <div class="container">
                     <h2 class="section-title">Постоянные клиенты</h2>
-                    <ul class="clients list">
+                    <ul class="clients list ">
                         <li class="clients__item">
                             <a class="clients__links" href="#">
                                 <svg class="clients__icon" width="44" height="49" >
@@ -444,7 +444,7 @@
                         
                     </ul>
                 </div>
-            </section> -->
+            </section>
 
     <!-- </main> -->
     <!--Footer-->
