--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
     <section class="team section">
       <div class="container">
         <h2 class="section-title">Наша команда</h2>
-        <ul class="team__block list">
+        <ul class="team__list list">
           <li class="team__item">
             <picture>
               <source media="(min-width: 1200px)"
