--- a/portfolio.html
+++ b/portfolio.html
@@ -12,30 +12,100 @@
     <title>portfolio</title>
 </head>
 <body class="body-pfolio">
-<header class="header section">
-    <div class="container">
-        <nav class="navigation">
-            <a class="logo logo__header link" lang="en" href="./index.html">Web<span
-                    class="logo__light-theme">Studio</span></a>
+    <header class="header">
+        <div class="container">
+          <nav class="navigation">
+            <a class="logo logo__header link" lang="en" href="./index.html">Web<span class="logo__light-theme">Studio</span></a>
             <ul class="navigation__list list">
-                <li class="navigation__item"><a class="navigation__link link" href="./index.html">Студия</a>
-                </li>
-                <li class="navigation__item"><a class="navigation__link link current" href="./portfolio.html">Портфолио</a></li>
-                <li class="navigation__item"><a class="navigation__link link" href="#contacts">Контакты</a></li>
+              <li class="navigation__item">
+                <a class="navigation__link link current" href="./index.html">Студия</a>
+              </li>
+              <li class="navigation__item">
+                <a class="navigation__link link" href="./portfolio.html">Портфолио</a>
+              </li>
+              <li class="navigation__item">
+                <a class="navigation__link link" href="#contacts">Контакты</a>
+              </li>
             </ul>
-        </nav>
-        <a class="cont-link link" href="mailto:info@devstudio.com">
-            <svg class="cont-link__icon" width="16" height="12">
-                <use class="icon-color" href="./images/sprite.svg#icon-envelope"></use>
+          </nav>
+          <ul class="tablet-conts list">
+            <li class="tablet-conts__item">
+              <a class="cont-link link" href="mailto:info@devstudio.com">
+                <svg class="cont-link__icon envelope-icon--size">
+                  <use href="./images/sprite.svg#icon-envelope"></use>
+                </svg>
+                info@devstudio.com
+              </a>
+            </li>
+            <li class="tablet-conts__item">
+              <a class="cont-link link" href="tel:+380961111111">
+                <svg class="cont-link__icon tel-icon--size">
+                  <use href="./images/sprite.svg#icon-smartphone"></use>
+                </svg>
+                +38 096 111 11 11
+              </a>
+            </li>
+          </ul>
+          <button class="burger-btn" type="button" data-menu-button>
+            <svg class="burger-icon">
+              <use href="./images/sprite.svg#burger-btn_40px"></use>
             </svg>
-            info@devstudio.com</a>
-        <a class="cont-link link" href="tel:+380961111111">
-            <svg class="cont-link__icon" width="10" height="16">
-                <use href="./images/sprite.svg#icon-smartphone"></use>
+          </button>
+        </div>
+  
+        <!-- Mobile-Menu -->
+        <div class="mobile-menu" data-menu>
+          <ul class="mobile-menu__list list">
+            <li class="mobile-menu__item">
+              <a class="mobile-menu__link link" href="">Студия</a>
+            </li>
+            <li class="mobile-menu__item">
+              <a class="mobile-menu__link link" href="">Портфолио</a>
+            </li>
+            <li class="mobile-menu__item">
+              <a class="mobile-menu__link link" href="">Контакты</a>
+            </li>
+          </ul>
+          <ul class="mobile-menu__cont-link list">
+            <li class="mobile-menu__cont-item">
+              <a class="cont-link link cont-link--tel" href="tel:+380961111111">
+                +38&nbsp096&nbsp111&nbsp11&nbsp11
+              </a>
+            </li>
+            <li class="mobile-menu__cont-item">
+              <a
+                class="cont-link link cont-link--mail"
+                href="mailto:info@devstudio.com"
+              >
+                info@devstudio.com
+              </a>
+            </li>
+            <li class="mobile-menu__cont-item">
+              <ul class="mobile-menu-social list">
+                <li class="mobile-menu-social__item">
+                  <a href="#" class="mobile-menu-social__link link">Instagram</a>
+                </li>
+                <li class="mobile-menu-social__item">
+                  <a href="#" class="mobile-menu-social__link link">Twitter</a>
+                </li>
+                <li class="mobile-menu-social__item">
+                  <a href="#" class="mobile-menu-social__link link">Facebook</a>
+                </li>
+                <li class="mobile-menu-social__item">
+                  <a href="#" class="mobile-menu-social__link link">LinkedIn</a>
+                </li>
+              </ul>
+            </li>
+          </ul>
+  
+          <button class="close-btn" type="button" data-menu-close>
+            <svg class="close-btn__icon">
+              <use href="./images/sprite.svg#icon-close-black-18dp-1"></use>
             </svg>
-            +38 096 111 11 11</a>
-    </div>
-</header>
+          </button>
+        </div>
+        <!-- Mobile-Menu End -->
+      </header>
     <main class="portfolio">
         <section class="section">   
             <h2 class="vissually-hidden">Наши проекты</h2>
@@ -163,60 +233,58 @@
             </div>
         </section>
     </main>
-<footer class="footer" id="contacts">
-    <div class="container footer__container">
-        <div>
-            <a class="logo link" lang="en" href="./index.html">Web<span class="logo__dark-theme">Studio</span></a>
-            <address class="adress-box">
-                <ul class="list">
-                    <li><a class="link adress-box__addres" href="https://goo.gl/maps/v4iGPYSP957dXcmK9" target="_blank"
+    <footer class="footer" id="contacts">
+        <div class="container footer__container">
+          <div class="footer-wraper">
+            <div class="footer__contacts">
+                <a class="logo link" lang="en" href="./index.html">Web<span class="logo__dark-theme">Studio</span></a>
+                    <address class="adress-box">
+                        <ul class="list">
+                            <li><a class="link adress-box__addres" href="https://goo.gl/maps/v4iGPYSP957dXcmK9" target="_blank"
                             rel="noopener noreferrer">г. Киев, пр-т Леси Украинки, 26</a></li>
-                    <li><a class="link adress-box__link" href="mailto:info@example.com">info@example.com</a></li>
-                    <li><a class="link adress-box__link" href="tel:+380991111111">+38 099 111 11 11</a></li>
-                </ul>
-            </address>
+                            <li><a class="link adress-box__link" href="mailto:info@example.com">info@example.com</a></li>
+                            <li><a class="link adress-box__link" href="tel:+380991111111">+38 099 111 11 11</a></li>
+                        </ul>
+                    </address>
+            </div>
+            <div class="footer__social">
+                <p class="footer__social-title">присоединяйтесь</p>
+                    <ul class="social social--footer">
+                        <li class="social__item social__item--footer list"><a class="social__link social__link--footer list" href="#">
+                                <svg class="social__icon social__icon--footer">
+                                    <use href="./images/sprite.svg#icon-instagram"></use>
+                                </svg></a>
+                        </li>
+                        <li class="social__item social__item--footer list"><a class="social__link social__link--footer list" href="#">
+                                <svg class="social__icon social__icon--footer">
+                                    <use href="./images/sprite.svg#icon-twitter"></use>
+                                </svg></a>
+                        </li>
+                        <li class="social__item social__item--footer list"><a class="social__link social__link--footer list" href="#">
+                                <svg class="social__icon social__icon--footer">
+                                    <use href="./images/sprite.svg#icon-facebook"></use>
+                                </svg></a>
+                        </li>
+                        <li class="social__item social__item--footer list"><a class="social__link social__link--footer list" href="#">
+                                <svg class="social__icon social__icon--footer">
+                                    <use href="./images/sprite.svg#icon-linkedin"></use>
+                                </svg></a>
+                        </li>
+                    </ul>
+            </div>
+          </div>
+            <div class="submit-box">
+                <p class="submit-box__tittle" >Подпишитесь на рассылку</p>
+                <form class="submit-box__form" name="sign-up-form" autocomplete="off">
+                    <input class="submit-box__input" type="email" name="user-email" placeholder="E-mail" required>
+                    <button type="submit" class="button">Подписаться
+                        <svg class="button__icon">
+                            <use href="./images/sprite.svg#icon-icon-send"></use>
+                        </svg>
+                    </button>
+                </form>
+            </div>
         </div>
-        <div class="footer__contacts">
-            <p class="footer__social-title">присоединяйтесь</p>
-            <ul class="social social--footer">
-                <li class="social__item social__item--footer list"><a class="social__link social__link--footer list"
-                        href="#">
-                        <svg class="social__icon social__icon--footer">
-                            <use href="./images/sprite.svg#icon-instagram"></use>
-                        </svg></a>
-                </li>
-                <li class="social__item social__item--footer list"><a class="social__link social__link--footer list"
-                        href="#">
-                        <svg class="social__icon social__icon--footer">
-                            <use href="./images/sprite.svg#icon-twitter"></use>
-                        </svg></a>
-                </li>
-                <li class="social__item social__item--footer list"><a class="social__link social__link--footer list"
-                        href="#">
-                        <svg class="social__icon social__icon--footer">
-                            <use href="./images/sprite.svg#icon-facebook"></use>
-                        </svg></a>
-                </li>
-                <li class="social__item social__item--footer list"><a class="social__link social__link--footer list"
-                        href="#">
-                        <svg class="social__icon social__icon--footer">
-                            <use href="./images/sprite.svg#icon-linkedin"></use>
-                        </svg></a>
-                </li>
-            </ul>
-        </div>
-        <div class="submit-box">
-            <p class="submit-box__tittle">Подпишитесь на рассылку</p>
-            <form class="submit-box__form" name="sign-up-form" autocomplete="off">
-                <input class="submit-box__input" type="email" name="user-email" placeholder="E-mail" required>
-                <button type="submit" class="button">Подписаться
-                    <svg class="button__icon">
-                        <use href="./images/sprite.svg#icon-icon-send"></use>
-                    </svg>
-                </button>
-            </form>
-        </div>
-    </div>
-</footer>
+    </footer>
 </body>
 </html>
