add portfolio and fix styles
add portfolio and fix styles

--- a/index.html
+++ b/index.html
@@ -58,13 +58,13 @@
       <div class="mobile-menu" data-menu>
         <ul class="mobile-menu__list list">
           <li class="mobile-menu__item">
-            <a class="mobile-menu__link link" href="">Студия</a>
+            <a class="mobile-menu__link link" href="./index.html">Студия</a>
           </li>
           <li class="mobile-menu__item">
-            <a class="mobile-menu__link link" href="">Портфолио</a>
+            <a class="mobile-menu__link link" href="./portfolio.html">Портфолио</a>
           </li>
           <li class="mobile-menu__item">
-            <a class="mobile-menu__link link" href="">Контакты</a>
+            <a class="mobile-menu__link link" href="#contacts">Контакты</a>
           </li>
         </ul>
         <ul class="mobile-menu__cont-link list">
@@ -492,7 +492,7 @@
     <!-- Fotter END -->
 
     <!-- Modal Window -->
-    <!-- <div class="backdrop is-hidden" data-modal>
+    <div class="backdrop is-hidden" data-modal>
     <form class="modal" method="GET" autocomplete="off">
         <button type="button" class="close-btn" data-modal-close>
             <svg class="close-btn__icon">
@@ -535,10 +535,10 @@
         </label>
     <button type="submit" class="button modal__button">Отправить</button>
     </form>
-    </div> -->
+    </div>
 
     <script src="./js/mobile-menu.js"></script>
-    <!-- <script src="./js/modal.js"></script> -->
+    <script src="./js/modal.js"></script>
 
     <!-- Modal Window END-->
   </body>
