--- a/portfolio.html
+++ b/portfolio.html
@@ -60,7 +60,7 @@
               <a class="mobile-menu__link link" href="./index.html">Студия</a>
             </li>
             <li class="mobile-menu__item">
-              <a class="mobile-menu__link link current" href="./portfolio.html">Портфолио</a>
+              <a class="mobile-menu__link link" href="./portfolio.html">Портфолио</a>
             </li>
             <li class="mobile-menu__item">
               <a class="mobile-menu__link link" href="#contacts">Контакты</a>
