--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
       <div class="mobile-menu" data-menu>
         <ul class="mobile-menu__list list">
           <li class="mobile-menu__item">
-            <a class="mobile-menu__link link" href="./index.html">Студия</a>
+            <a class="mobile-menu__link link mob-current" href="./index.html">Студия</a>
           </li>
           <li class="mobile-menu__item">
             <a class="mobile-menu__link link" href="./portfolio.html">Портфолио</a>
